image updated for all articles

--- a/article.html
+++ b/article.html
@@ -31,7 +31,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/1884574/pexels-photo-1884574.jpeg" alt="Ethiopia Premier League - football stadium crowd">
+          <img src="images/ethiopia-premier-league-title-race.jpg" alt="Ethiopia Premier League - football stadium crowd">
         </div>
         <div class="article-body">
           <p>With the season entering its final stretch, the Ethiopia Premier League title race could not be tighter. Several top clubs remain in contention for the domestic crown, setting up a thrilling finish to what has already been a memorable campaign.</p>
@@ -50,7 +50,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/47730/pexels-photo-47730.jpeg" alt="Football on pitch - transfer season">
+          <img src="images/ethiopia-transfer-top-fight.jpeg" alt="Football on pitch - transfer season">
         </div>
         <div class="article-body">
           <p>A star player has completed a high-profile move between two Ethiopia Premier League title contenders, in a deal that has dominated headlines and sparked debate among fans and experts alike.</p>
@@ -69,7 +69,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/128457/pexels-photo-128457.jpeg" alt="Premier League stadium - Anfield atmosphere">
+          <img src="images/liverpool-late-winning.jpg" alt="Premier League stadium - Anfield atmosphere">
         </div>
         <div class="article-body">
           <p>Liverpool have moved to the top of the Premier League table after a dramatic late winner at Anfield, sending the home crowd into raptures and underlining the team's never-say-die spirit under their manager.</p>
@@ -88,7 +88,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/274946/pexels-photo-274946.jpeg" alt="Arsenal - football action">
+          <img src="images/north-london-derby.jpg" alt="Arsenal - football action">
         </div>
         <div class="article-body">
           <p>Arsenal have secured bragging rights in the North London derby with a thrilling victory over their rivals, in a match that lived up to its billing and kept millions of viewers on the edge of their seats until the final whistle.</p>
@@ -107,7 +107,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/8941650/pexels-photo-8941650.jpeg" alt="Chelsea - football and new era">
+          <img src="images/chelsea-new-manager.jpg" alt="Chelsea - football and new era">
         </div>
         <div class="article-body">
           <p>Chelsea have confirmed the appointment of their new manager ahead of the next campaign, bringing to an end a period of speculation and opening a new chapter in the club's history.</p>
@@ -126,7 +126,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/26546640/pexels-photo-26546640.jpeg" alt="Manchester City - football and transfers">
+          <img src="images/city-confirm-major-transfer.jpg" alt="Manchester City - football and transfers">
         </div>
         <div class="article-body">
           <p>Manchester City have announced a major new signing as the champions look to strengthen their squad and maintain their grip on domestic and European silverware.</p>
@@ -145,7 +145,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/1197220/pexels-photo-1197220.jpeg" alt="Manchester United - comeback victory">
+          <img src="images/united-complete-stunning-comeback.jpg" alt="Manchester United - comeback victory">
         </div>
         <div class="article-body">
           <p>Manchester United have fought back from two goals down to claim a memorable victory that will go down as one of the results of the season and a testament to the spirit within the squad.</p>
@@ -164,7 +164,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/307492/pexels-photo-307492.jpeg" alt="Newcastle United - European push">
+          <img src="images/newcastle-push-for-european-spot.jpg" alt="Newcastle United - European push">
         </div>
         <div class="article-body">
           <p>Newcastle United are eyeing continental qualification after a strong run of form that has seen them climb the table and emerge as serious contenders for a European place.</p>
@@ -183,7 +183,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/46798/pexels-photo-46798.jpeg" alt="El Clasico - Real Madrid vs Barcelona">
+          <img src="images/realmadrid-wins-elclasico.jpg" alt="El Clasico - Real Madrid vs Barcelona">
         </div>
         <div class="article-body">
           <p>Real Madrid have secured a crucial victory in El Clasico, beating Barcelona to strengthen their position in the La Liga title race and land a psychological blow in one of world football's greatest rivalries.</p>
@@ -202,7 +202,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg" alt="Barcelona - La Liga under Xavi">
+          <img src="images/barcelona-under-xavi.jpg" alt="Barcelona - La Liga under Xavi">
         </div>
         <div class="article-body">
           <p>Barcelona are showing clear improvement as the season reaches its climax under coach Xavi, with the team's style and results drawing praise from fans and experts alike.</p>
@@ -221,7 +221,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg" alt="Cristiano Ronaldo - 900 career goals">
+          <img src="images/ronaldo-900-goals.jpg" alt="Cristiano Ronaldo - 900 career goals">
         </div>
         <div class="article-body">
           <p>Cristiano Ronaldo has hit another historic milestone by reaching 900 career goals, a figure that few in the history of the game can even dream of and that cements his place among the greatest goalscorers of all time.</p>
@@ -240,7 +240,7 @@
           <p class="article-meta">Sport News</p>
         </header>
         <div class="article-image">
-          <img src="https://images.pexels.com/photos/1884576/pexels-photo-1884576.jpeg" alt="Lionel Messi - Inter Miami and MLS">
+          <img src="images/messi-impact-on-miami.jpg" alt="Lionel Messi - Inter Miami and MLS">
         </div>
         <div class="article-body">
           <p>Lionel Messi continues to shine in MLS with Inter Miami, contributing goals and assists at a remarkable rate and lifting the profile of the league to heights that would have been hard to imagine before his arrival.</p>
@@ -258,10 +258,10 @@
     <p>&copy; Sport News. All rights reserved.</p>
     <div class="footer-social">
       <ul>
-        <li><a href="https://t.me/sportnews" target="_blank" rel="noopener">Telegram</a></li>
-        <li><a href="https://instagram.com/sportnews" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://t.me/pricelessboy2849" target="_blank" rel="noopener">Telegram</a></li>
+        <li><a href="https://instagram.com/eyudulla7" target="_blank" rel="noopener">Instagram</a></li>
         <li><a href="https://facebook.com/sportnews" target="_blank" rel="noopener">Facebook</a></li>
-        <li><a href="https://tiktok.com/@sportnews" target="_blank" rel="noopener">TikTok</a></li>
+        <li><a href="https://tiktok.com/@priceless.boy" target="_blank" rel="noopener">TikTok</a></li>
       </ul>
     </div>
   </footer>
