--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="site-brand"><a href="index.html">Sport News</a></div>
+    <div class="site-brand"><a href="index.html">EYU SPORT</a></div>
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
     <section class="news-grid">
       <article class="news-card">
         <a href="article.html#article-3">
-          <img class="news-card__image" src="https://images.pexels.com/photos/128457/pexels-photo-128457.jpeg" alt="Football stadium">
+          <img class="news-card__image" src="images/liverpool-late-winning.jpg" alt="Football stadium">
           <div class="news-card__body">
             <span class="category-badge category-badge--premier-league">Premier League</span>
             <h2 class="news-card__title">Liverpool go top after late winner</h2>
@@ -36,7 +36,7 @@
       </article>
       <article class="news-card">
         <a href="article.html#article-9">
-          <img class="news-card__image" src="https://images.pexels.com/photos/46798/pexels-photo-46798.jpeg" alt="El Clasico stadium">
+          <img class="news-card__image" src="images/realmadrid-wins-elclasico.jpg" alt="El Clasico stadium">
           <div class="news-card__body">
             <span class="category-badge category-badge--laliga">La Liga</span>
             <h2 class="news-card__title">Real Madrid win El Clasico</h2>
@@ -47,7 +47,7 @@
       </article>
       <article class="news-card">
         <a href="article.html#article-11">
-          <img class="news-card__image" src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg" alt="Football player">
+          <img class="news-card__image" src="images/ronaldo-900-goals.jpg" alt="Football player">
           <div class="news-card__body">
             <span class="category-badge category-badge--top-players">Top Players</span>
             <h2 class="news-card__title">Ronaldo reaches 900 career goals</h2>
@@ -58,7 +58,7 @@
       </article>
       <article class="news-card">
         <a href="article.html#article-1">
-          <img class="news-card__image" src="https://images.pexels.com/photos/1884574/pexels-photo-1884574.jpeg" alt="Soccer match">
+          <img class="news-card__image" src="images/ethiopia-premier-league-title-race.jpg" alt="Soccer match">
           <div class="news-card__body">
             <span class="category-badge category-badge--ethiopia-premier-league">Ethiopia Premier League</span>
             <h2 class="news-card__title">Ethiopia Premier League title race heats up</h2>
@@ -69,7 +69,7 @@
       </article>
       <article class="news-card">
         <a href="article.html#article-5">
-          <img class="news-card__image" src="https://images.pexels.com/photos/8941650/pexels-photo-8941650.jpeg" alt="Soccer game">
+          <img class="news-card__image" src="images/chelsea-new-manager.jpg" alt="Soccer game">
           <div class="news-card__body">
             <span class="category-badge category-badge--premier-league">Premier League</span>
             <h2 class="news-card__title">Chelsea name new manager</h2>
