--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
       <div class="news-grid">
         <article class="news-card">
           <a href="article.html#article-3">
-            <img class="news-card__image" src="https://images.pexels.com/photos/128457/pexels-photo-128457.jpeg" alt="">
+            <img class="news-card__image" src="images/liverpool-late-winning.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">Liverpool go top after late winner</h2>
@@ -45,7 +45,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-4">
-            <img class="news-card__image" src="https://images.pexels.com/photos/274946/pexels-photo-274946.jpeg" alt="">
+            <img class="news-card__image" src="images/north-london-derby.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">Arsenal win North London derby</h2>
@@ -56,7 +56,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-5">
-            <img class="news-card__image" src="https://images.pexels.com/photos/8941650/pexels-photo-8941650.jpeg" alt="">
+            <img class="news-card__image" src="images/chelsea-new-manager.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">Chelsea name new manager</h2>
@@ -67,7 +67,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-6">
-            <img class="news-card__image" src="https://images.pexels.com/photos/26546640/pexels-photo-26546640.jpeg" alt="">
+            <img class="news-card__image" src="images/city-confirm-major-transfer.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">Man City confirm major transfer</h2>
@@ -78,7 +78,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-7">
-            <img class="news-card__image" src="https://images.pexels.com/photos/1197220/pexels-photo-1197220.jpeg" alt="">
+            <img class="news-card__image" src="images/united-complete-stunning-comeback.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">United complete stunning comeback</h2>
@@ -89,7 +89,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-8">
-            <img class="news-card__image" src="https://images.pexels.com/photos/307492/pexels-photo-307492.jpeg" alt="">
+            <img class="news-card__image" src="images/newcastle-push-for-european-spot.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--premier-league">Premier League</span>
               <h2 class="news-card__title">Newcastle push for European spot</h2>
@@ -106,7 +106,7 @@
       <div class="news-grid">
         <article class="news-card">
           <a href="article.html#article-9">
-            <img class="news-card__image" src="https://images.pexels.com/photos/46798/pexels-photo-46798.jpeg" alt="">
+            <img class="news-card__image" src="images/realmadrid-wins-elclasico.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--laliga">La Liga</span>
               <h2 class="news-card__title">Real Madrid win El Clasico</h2>
@@ -117,7 +117,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-10">
-            <img class="news-card__image" src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg" alt="">
+            <img class="news-card__image" src="images/barcelona-under-xavi.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--laliga">La Liga</span>
               <h2 class="news-card__title">Barcelona form under Xavi</h2>
@@ -134,7 +134,7 @@
       <div class="news-grid">
         <article class="news-card">
           <a href="article.html#article-1">
-            <img class="news-card__image" src="https://images.pexels.com/photos/1884574/pexels-photo-1884574.jpeg" alt="">
+            <img class="news-card__image" src="images/ethiopia-premier-league-title-race.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--ethiopia-premier-league">Ethiopia Premier League</span>
               <h2 class="news-card__title">Ethiopia Premier League title race heats up</h2>
@@ -145,7 +145,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-2">
-            <img class="news-card__image" src="https://images.pexels.com/photos/47730/pexels-photo-47730.jpeg" alt="">
+            <img class="news-card__image" src="images/ethiopia-transfer-top-fight.jpeg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--ethiopia-premier-league">Ethiopia Premier League</span>
               <h2 class="news-card__title">Key transfer in Ethiopian top flight</h2>
@@ -162,7 +162,7 @@
       <div class="news-grid">
         <article class="news-card">
           <a href="article.html#article-11">
-            <img class="news-card__image" src="https://images.pexels.com/photos/1438761/pexels-photo-1438761.jpeg" alt="">
+            <img class="news-card__image" src="images/ronaldo-900-goals.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--top-players">Top Players</span>
               <h2 class="news-card__title">Ronaldo reaches 900 career goals</h2>
@@ -173,7 +173,7 @@
         </article>
         <article class="news-card">
           <a href="article.html#article-12">
-            <img class="news-card__image" src="https://images.pexels.com/photos/1884576/pexels-photo-1884576.jpeg" alt="">
+            <img class="news-card__image" src="images/messi-impact-on-miami.jpg" alt="">
             <div class="news-card__body">
               <span class="category-badge category-badge--top-players">Top Players</span>
               <h2 class="news-card__title">Messi's Inter Miami impact</h2>
