--- a/login.html
+++ b/login.html
@@ -43,10 +43,10 @@
     <p>&copy; Sport News. All rights reserved.</p>
     <div class="footer-social">
       <ul>
-        <li><a href="https://t.me/sportnews" target="_blank" rel="noopener">Telegram</a></li>
-        <li><a href="https://instagram.com/sportnews" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://t.me/dremmiegirl" target="_blank" rel="noopener">Telegram</a></li>
+        <li><a href="https://instagram.com/canny_1593" target="_blank" rel="noopener">Instagram</a></li>
         <li><a href="https://facebook.com/sportnews" target="_blank" rel="noopener">Facebook</a></li>
-        <li><a href="https://tiktok.com/@sportnews" target="_blank" rel="noopener">TikTok</a></li>
+        <li><a href="https://tiktok.com/@priceless.boy" target="_blank" rel="noopener">TikTok</a></li>
       </ul>
     </div>
   </footer>
