--- a/article.html
+++ b/article.html
@@ -258,8 +258,8 @@
     <p>&copy; Sport News. All rights reserved.</p>
     <div class="footer-social">
       <ul>
-        <li><a href="https://t.me/pricelessboy2849" target="_blank" rel="noopener">Telegram</a></li>
-        <li><a href="https://instagram.com/eyudulla7" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="https://t.me/dremmiegirl" target="_blank" rel="noopener">Telegram</a></li>
+        <li><a href="https://instagram.com/canny_1593" target="_blank" rel="noopener">Instagram</a></li>
         <li><a href="https://facebook.com/sportnews" target="_blank" rel="noopener">Facebook</a></li>
         <li><a href="https://tiktok.com/@priceless.boy" target="_blank" rel="noopener">TikTok</a></li>
       </ul>
